[package]
name = "RustBackendSample"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["macros", "time", "rt-multi-thread"] }
signal-hook = "0.3"
signal-hook-tokio = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1.17"

[dev-dependencies]
